# Copyright (c) 2021, G.A. vd. Hoorn
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# author: G.A. vd. Hoorn

[metadata]
name = dominh
version = attr: dominh.__version__
description = "Poor man's implementation of an RPC interface to Fanuc R-30iA and R-30iB(+) controllers"
license = Apache License, Version 2.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/gavanderhoorn/dominh
project_urls =
    Bug Tracker = https://github.com/gavanderhoorn/dominh/issues
    GitHub = https://github.com/gavanderhoorn/dominh
author = G.A. vd. Hoorn
author_email = g.a.vanderhoorn@tudelft.nl
maintainer = G.A. vd. Hoorn
maintainer_email = g.a.vanderhoorn@tudelft.nl
keywords = fanuc, pcdk, robotics, r-30ia, r-30ib, rpc
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
